--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SecondLife</title>
-    <link rel="shortcut icon" href="./images/Nurik icon.jfif" type="image/x-icon">
+    <link rel="shortcut icon" href="blob:https://web.whatsapp.com/a01745b3-e855-4338-8940-42f225595fd6" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
@@ -73,4 +73,5 @@
         Telegram | Instagram | Contact | Privacy Policy
         </div>
 </body>
+
 </html>
